# django-disguise

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  Procfile  README  README.rst  coverage.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: publish-to-test-pypi.yml  tox.yml
disguise/: __init__.py  apps.py  checks.py  compat.py  conf.py  const.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
disguise/locale/: django.pot
disguise/locale/ru/LC_MESSAGES/: django.mo  django.po
disguise/static/disguise/js/: disguise-angular.js  disguise-jquery.js
disguise/templates/disguise/: form.html  widget_base.html
disguise/templates/disguise/tests/: index.html
disguise/templatetags/: disguise_tags.py
disguise/tests/: __init__.py  urls.py
docs/: Makefile
docs/source/: about.rst  changelog.rst  conf.py  configuration.rst  customize.rst  index.rst  install.rst
example_project/: __init__.py  apps.py  create_users.py  settings.py  settings_test.py  signal_handlers.py  stuff.py  urls.py  views.py  wsgi.py
example_project/templates/: base.html  github.html  index.html  login.html
tests/: __init__.py  __init__.xxx  conftest.py  test_checks.py  test_form.py  test_signals.py  test_utils.py  test_views.py
