[metadata]
name = django-disguise

[bdist_wheel]
universal = 1

;; Coverage
[coverage:run]
source = disguise
branch = True
omit =
    .tox/*
    .eggs/*
    dist/*
    example_project/*

[coverage:report]
omit =
    .tox/*
    .eggs/*
    dist/*
    example_project/*

exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

;; Tox

[tox:tox]
isolated_build = true

envlist =
    {py27}-dj{111}
    py{34,35,36,37}-dj{111,22}
    py{35,36,37,38}-dj{22,30}

[tox:.package]
basepython =
    py27: python2.7
    py34: python3.4
    py35: python3.5
    py36: python3.6
    py37: python3.7
    py38: python3.8

[testenv]
deps =
    dj-database-url
    pytest
    pytest-cov
    pytest-django
    pytest-env
    pytest-flake8
    pytest-isort
    pytest-pythonpath
    python-decouple
    dj111: django>=1.11,<2.0
    dj22:  django>=2.2,<3.0
    dj30:  django>=3.0,<3.1

commands =
    pip install -e .
    pytest -s -v --isort --flake8 --cov=. --cov-append {posargs}

whitelist_externals =
    pytest

;; pytest

[tool:pytest]
addopts =
    -s
    -v
    --ds=example_project.settings_test

; pytest-django
django_find_project = false

; pytest-env
env =
    DEBUG=false
    SECRET_KEY=s3cR37_k3Y
    DATABASE_URL=sqlite://:memory:
