[metadata]
name = django-disguise
version = 1.0
author = Mikhail Porokhovnichenko
author_email = marazmiki@gmail.com
url = https://github.com/marazmiki/django-disquise
description = A small app that let a superuser login as an arbitrary user without detaching from the admin session
long_description = file: README.rst, LICENSE
platforms =
    OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

;; Coverage

[coverage:run]
source = disguise
branch = True
omit =
    .tox/*
    .eggs/*
    dist/*
    example_project/*

[coverage:report]
omit =
    .tox/*
    .eggs/*
    dist/*
    example_project/*

exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

;; Tox

[tox:tox]
envlist =
    py27-dj{111}
    py{34,35}-dj{111,20,21,22}
    py{36,37}-dj{111,20,21,22,30}
    py38-dj{20,21,22,30}

basepython =
    py27: python2.7
    py34: python3.4
    py35: python3.5
    py36: python3.6
    py37: python3.7
    py37: python3.8

[testenv]
deps =
    dj-database-url
    pytest
    pytest-cov
    pytest-django
    pytest-env
    pytest-flake8
    pytest-isort
    pytest-pythonpath
    python-decouple
    dj111: django>=1.11,<2.0
    dj20:  django>=2.0,<2.1
    dj21:  django>=2.1,<2.2
    dj22:  django>=2.2,<2.3
    dj30:  django>=3.0,<3.1

commands =
    pip install -e .
    pytest -s -v {posargs}

whitelist_externals =
    pytest

;; pytest

[tool:pytest]
addopts =
    -s
    -v
    --ds=example_project.settings

; pytest-django
django_find_project = false

; pytest-env
env =
    DEBUG=false
    SECRET_KEY=s3cR37_k3Y
    DATABASE_URL=sqlite://:memory:
